--- a/src/App.css
+++ b/src/App.css
@@ -74,9 +74,8 @@ border-radius: 5px;
 background-color:thistle;
 margin-top: 15px;
 cursor: pointer;
-right: 80px;
+left: 10px;
 position:relative;
-
 }
 
 .deleteButton{
@@ -85,8 +84,8 @@ border-radius: 5px;
 background-color:rosybrown;
 margin-top: 15px;
 cursor: pointer;
-left: 80px;
-position:relative;
+left: 30px;
+/* position:relative; */
 }
 
 .addButton{
